# sentient

./: .gitignore  .vscode-ctags  CMakeLists.txt  Cargo.toml  README.md  Sentient.sln  conanfile.txt  sentient.cmake  sentient.mk  sentient.sln  setup.py  tsconfig.json
c/: CMakeLists.txt  README.md  sentient.mk
c/include/: sentient.h
c/include/sentient/: config.h  core.h  core_c.h  field_info.h  obj_manip.h  platform.h  pop_cpp_guard.h  primitive_types.h  push_cpp_guard.h  sentient.h  string.h  time.h  type_eumerations.h  type_info.h
c/include/sentient/core/: checksum_types.h  error_checker_types.h  field_info.h  field_types.h  memory.h  model_info.h  model_types.h  pp_utils.h  protocol.h  protocol_info.h  sentient_model.h  serialization_info.h  type_info.h  types.h
c/include/sentient/core/internal/: foreach.h  pp_utils.h  string_types.h  unique_counters.h
c/include/sentient/core/pp_utils/: basic_pp.h
c/include/sentient/core/protocol/: buffer_stream.h  protocol_error_codes.h  protocol_node.h  protocol_types.h
c/include/sentient/core_c/: reflection.h  reflection_types.h  type_info.h  types.h
c/include/sentient/core_c/internal/: foreach.h  string_types.h
c/include/sentient/detail/: decl_vec_types.h  macro_symbols.h  wrap_decl_primitive_types.h
c/include/sentient/preprocessor/: arithmetic.h  array.h  assert_msg.h  cat.h  comma.h  comma_if.h  comparison.h  control.h  debug.h  dec.h  empty.h  enum.h  enum_params.h  enum_params_with_a_default.h  enum_params_with_defaults.h  enum_shifted.h  enum_shifted_params.h  expand.h  expr_if.h  facilities.h  for.h  identity.h  if.h  inc.h  iterate.h  iteration.h  library.h  limits.h  list.h  logical.h  max.h  min.h  punctuation.h  repeat.h  repeat_2nd.h  repeat_3rd.h  repeat_from_to.h  repeat_from_to_2nd.h  repeat_from_to_3rd.h  repetition.h  (+8 more)
c/include/sentient/preprocessor/arithmetic/: add.h  dec.h  div.h  inc.h  mod.h  mul.h  sub.h
c/include/sentient/preprocessor/array/: data.h  elem.h  enum.h  insert.h  pop_back.h  pop_front.h  push_back.h  push_front.h  remove.h  replace.h  reverse.h  size.h  to_list.h  to_seq.h  to_tuple.h
c/include/sentient/preprocessor/comparison/: equal.h  greater.h  greater_equal.h  less.h  less_equal.h  not_equal.h
c/include/sentient/preprocessor/list/: adt.h  (+18 more)
c/include/sentient/serialization/: serialize.h
c/include/sentient/text_serialization/: json.h
c/src/example/c_model_creation/: CMakeLists.txt  example_model.c  example_model.h  main.c  model.snt
c/src/examples/: CMakeLists.txt
c/src/examples/c_model_creation/: CMakeLists.txt  example_model.c  example_model.h  main.c  model.snt
c/src/lib/: CMakeLists.txt  impl_primitive_types.h  impl_string.h  impl_time.h  mem_util.h  obj_manip.c  string.c  time.c  type_info.c
c/src/lib/cmake/: autogen.cmake
c/src/lib/core/: checksum_types.c  field_info.c  memory.c  model_info.c  protocol_info.c  types.c
c/src/lib/serialization/: serialize.c
c/test/: CMakeLists.txt  datetimes.c  protocols.c  serialization.c
cpp/: CMakeLists.txt  README.md  conanfile.txt
cpp/cmake/: autogen.cmake
cpp/docs/doxygen/: Doxyfile.in
cpp/example/model_creation/: conanfile.txt  main.cpp
cpp/examples/: CMakeLists.txt
cpp/examples/model_creation/: CMakeLists.txt  conanfile.txt  main.cpp  model.snt
cpp/include/sentient/: allocator.hpp  array.hpp  gregorian_calendar.hpp  list.hpp  map.hpp  observable.hpp  posix_time.hpp  primitive_types.hpp  protocol.hpp  sentient.hpp  serialization.hpp  string.hpp  timeval.hpp  unordered_map.hpp  vector.hpp
cpp/include/sentient/concepts/: atomic.hpp  complex.hpp  glm_mat.hpp  glm_vec.hpp  primitive.hpp  qvm_mat.hpp  qvm_vec.hpp  serializable_model.hpp  snt_list.hpp  snt_vector.hpp  std_list.hpp  std_shared_ptr.hpp  std_unique_ptr.hpp  std_vector.hpp
cpp/include/sentient/container/: array.hpp  basic_string.hpp  basic_string_view.hpp  list.hpp  map.hpp  static_string.hpp  string.hpp  string_fwd.hpp  unordered_map.hpp  vector.hpp
cpp/include/sentient/core/: api.hpp  datetime.hpp  define_model.hpp  object_pool.hpp  serialization.hpp  string.hpp  type_traits.hpp  types.hpp
cpp/include/sentient/detail/: comptime_string_literal.hpp  get_element_type.hpp  get_value_type.hpp  make_getter.hpp  make_setter.hpp
cpp/include/sentient/memory/: allocator.hpp  default_delete.hpp  shared_ptr.hpp  unique_ptr.hpp
cpp/include/sentient/object_pool/: object_pool.hpp  primitive_types_fwd.hpp
cpp/include/sentient/reflection/: default_model_base.hpp  define_default_model.hpp  define_encapsulated_model.hpp  define_fields.hpp  define_model.hpp  encapsulated_model_base.hpp  model_info.hpp
cpp/include/sentient/time/: gregorian_calendar.hpp  posix_time.hpp  timeval.hpp
cpp/src/examples/: CMakeLists.txt
cpp/src/examples/cpp_model_creation/: CMakeLists.txt  example.sntm.json  example.sntm.yaml  main.cpp  model.snt
cpp/test/: CMakeLists.txt  datetimes.cpp
csharp/: CMakeLists.txt  Types.cs
csharp/Examples/CSharpModelCreation/: CSharpModelCreation.csproj
csharp/Lib/: Sentient.csproj
csharp/examples/: CMakeLists.txt
csharp/examples/csharp_model_creation/: CMakeLists.txt  Program.cs  csharp_model_creation.csproj
csharp/lib/: CMakeLists.txt  DateTime.cs  I32.cs  Types.cs  sentient.csproj
sentient_compiler/: CMakeLists.txt  README.md  filesystem.hpp  framework.cpp  framework.hpp  languages.hpp  main.cpp  model_parser.cpp  model_parser.hpp  parser_base.hpp  version_output.hpp
sentient_compiler/language/: cpp_generator.hpp  java_generator.hpp
sentient_compiler/src/: CMakeLists.txt  filesystem.cpp  filesystem.hpp  framework.hpp  generation_types.hpp  languages.hpp  main.cpp  model_parser.hpp  parse_result.hpp  program.cpp  program.hpp  version.hpp  version_output.cpp  version_output.hpp
sentient_compiler/src/language/: csharp_generator.hpp  generator_base.hpp  python_generator.hpp  rust_generator.hpp
sentient_compiler/test/: CMakeLists.txt
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  arg_parser.cpp  arg_parser.hpp  filesystem.cpp  filesystem.hpp  framework.cpp  framework.hpp  main.cpp  version.hpp  version_output.cpp
(+356 files in other folders)
