[package]
name = "sentient"
version = "0.1.0"
edition = "2021"
authors = ["Jin", "Lucky"]
repository = "https://github.com/hyper-level-nerds/sentient"
readme = "README.md"
license = "BSL-1.0"
keywords = ["serialization", "ORM"]
description = "library"

[dependencies]

[lib]
name = "sentient"           # The name of the target.
path = "rust/src/lib.rs"    # The source file of the target.
test = true                 # Is tested by default.
doctest = true              # Documentation examples are tested by default.
bench = true                # Is benchmarked by default.
doc = true                  # Is documented by default.
plugin = false              # Used as a compiler plugin (deprecated).
proc-macro = false          # Set to `true` for a proc-macro library.
harness = true              # Use libtest harness.
edition = "2015"            # The edition of the target.
crate-type = ["lib"]

[[example]]
name = "rust_model_creation"
